# STM32_Audio_Stream

./: .cproject  .gitignore  .gitignore.swp  .mxproject  .project  CMakeLists.txt  Microhone Debug.launch  Microphone.ioc  STM32_Audio_Stream.launch  make_bin.sh  setup.sh
Core/Inc/: BUFF_SIZE.h  FreeRTOSConfig.h  app_init.h  main.h  stm32f4xx_hal_conf.h  stm32f4xx_it.h
Core/Src/: app_init.c  arm_dot_prod_f32.c  arm_float_to_q31.c  main.c  stm32f4xx_hal_msp.c  stm32f4xx_it.c  sysmem.c
DSP/Fourier_Transform/: fourier.c  fourier.h  return_vals.h
DSP/Inc/: arm_common_tables.h  arm_const_structs.h  complex_numbers.h  fast_math_functions.h  support_functions.h
DSP/Linear_Filtering/: lpf.c  lpf.h
DSP/Src/: arm_dot_prod_f32.c  arm_float_to_q31.c  complex_numbers.c
Debug/: Microphone.elf  Microphone.list  Microphone.map  STM32_Audio_Stream.elf  STM32_Audio_Stream.list  STM32_Audio_Stream.map  makefile  objects.list  sources.mk
Debug/Core/Src/: arm_dot_prod_f32.d  arm_dot_prod_f32.su  arm_float_to_q31.d  arm_float_to_q31.su  main.d  main.su  stm32f4xx_hal_msp.d  stm32f4xx_hal_msp.su  stm32f4xx_it.d  stm32f4xx_it.su  subdir.mk  system_stm32f4xx.d
Debug/DSP/Src/: arm_dot_prod_f32.d  arm_dot_prod_f32.su  arm_float_to_q31.d  arm_float_to_q31.su  subdir.mk
Debug/Drivers/STM32F4xx_HAL_Driver/Src/: stm32f4xx_hal.d  stm32f4xx_hal_cortex.d  stm32f4xx_hal_dma.d  stm32f4xx_hal_dma_ex.d  stm32f4xx_hal_exti.d  stm32f4xx_hal_flash.d  stm32f4xx_hal_flash_ex.d  stm32f4xx_hal_flash_ramfunc.d  stm32f4xx_hal_gpio.d  stm32f4xx_hal_i2s.d  stm32f4xx_hal_i2s_ex.d  stm32f4xx_hal_pwr.d  stm32f4xx_hal_pwr_ex.d  stm32f4xx_hal_rcc.d  stm32f4xx_hal_rcc_ex.d  stm32f4xx_hal_spi.d  stm32f4xx_hal_uart.d  subdir.mk
Drivers/BLE/: ble_mod.c  ble_mod.h
Drivers/OLED/: oled.c  oled.h
Drivers/SPI/: spi_driver.c  spi_driver.h
Drivers/SPI/Inc/: spi_driver.h
Drivers/SPI/Src/: spi_driver.c
Drivers/STM32F4xx_HAL_Driver/Src/: stm32f4xx_hal_spi.c
Drivers/UART/: uart_comm.c  uart_comm.h
arm_toolchain/arm-gnu-toolchain-12.2.mpacbti-rel1-darwin-arm64-arm-none-eabi/.fseventsd/: 000000005920e87b  000000005920e87c  fseventsd-uuid
arm_toolchain/arm-gnu-toolchain-12.2.mpacbti-rel1-darwin-arm64-arm-none-eabi/arm-none-eabi/lib/: libstdc++.a-gdb.py
arm_toolchain/arm-gnu-toolchain-12.2.mpacbti-rel1-darwin-arm64-arm-none-eabi/share/doc/annotate/: Annotations-Overview.html  Annotations-for-Running.html  Breakpoint-Info.html  Displays.html  Errors.html  Frame-Annotations.html  GNU-Free-Documentation-License.html  Invalidation.html  Limitations.html  Migrating-to-GDB_002fMI.html  Multi_002dthreaded-Apps.html  Prompting.html  Server-Prefix.html  Source-Annotations.html  Value-Annotations.html  index.html
arm_toolchain/arm-gnu-toolchain-12.2.mpacbti-rel1-darwin-arm64-arm-none-eabi/share/doc/cpp/: Alternatives-to-Wrapper-_0023ifndef.html  Argument-Prescan.html  C_002b_002b-Named-Operators.html  Character-sets.html  Common-Predefined-Macros.html  Computed-Includes.html  Concatenation.html  Concept-Index.html  Conditional-Syntax.html  Conditional-Uses.html  Conditionals.html  Defined.html  Deleted-Code.html  Diagnostics.html  Directives-Within-Macro-Arguments.html  Duplication-of-Side-Effects.html  Elif.html  Else.html  Environment-Variables.html  Function_002dlike-Macros.html  GNU-Free-Documentation-License.html  Header-Files.html  If.html  Ifdef.html  Implementation-Details.html  Implementation-limits.html  Implementation_002ddefined-behavior.html  Include-Operation.html  Include-Syntax.html  Index-of-Directives.html  Initial-processing.html  Invocation.html  Line-Control.html  Macro-Arguments.html  Macro-Pitfalls.html  Macros.html  Misnesting.html  Newlines-in-Arguments.html  Object_002dlike-Macros.html  Obsolete-Features.html  (+31 more)
arm_toolchain/arm-gnu-toolchain-12.2.mpacbti-rel1-darwin-arm64-arm-none-eabi/share/doc/cppinternals/: Files.html  Lexer.html  Line-Numbering.html
arm_toolchain/arm-gnu-toolchain-12.2.mpacbti-rel1-darwin-arm64-arm-none-eabi/share/doc/gcc/: AArch64-Built_002din-Functions.html  AArch64-Function-Attributes.html  AArch64-Options.html  AArch64-Pragmas.html  AMD-GCN-Function-Attributes.html  AMD-GCN-Options.html  ARC-Built_002din-Functions.html  ARC-Function-Attributes.html  ARC-Options.html  ARC-SIMD-Built_002din-Functions.html  ARC-Type-Attributes.html  ARC-Variable-Attributes.html  ARM-ARMv8_002dM-Security-Extensions.html  ARM-C-Language-Extensions-_0028ACLE_0029.html  ARM-Floating-Point-Status-and-Control-Intrinsics.html  ARM-Function-Attributes.html  ARM-Options.html  ARM-Pragmas.html  ARM-Type-Attributes.html  ARM-iWMMXt-Built_002din-Functions.html  AVR-Built_002din-Functions.html  AVR-Function-Attributes.html  AVR-Options.html  AVR-Variable-Attributes.html  Actual-Bugs.html  Adapteva-Epiphany-Options.html  Alignment.html  Alpha-Built_002din-Functions.html  Altera-Nios-II-Built_002din-Functions.html  Alternate-Keywords.html  Architecture-implementation.html  Argument-Types.html  Arrays-and-pointers-implementation.html  Asm-Labels.html  Assembler-Options.html  Attribute-Syntax.html  BPF-Built_002din-Functions.html  BPF-Function-Attributes.html  BPF-Type-Attributes.html  Backwards-Compatibility.html  (+368 more)
arm_toolchain/arm-gnu-toolchain-12.2.mpacbti-rel1-darwin-arm64-arm-none-eabi/share/doc/gccinstall/: binaries.html  build.html  configure.html  download.html  finalinstall.html  gfdl.html  index.html  prerequisites.html  specific.html  test.html
arm_toolchain/arm-gnu-toolchain-12.2.mpacbti-rel1-darwin-arm64-arm-none-eabi/share/doc/gccint/: Accessors.html  Ada-Tests.html  Add-Options.html  Adding-a-new-GIMPLE-statement-code.html  Adding-new-DECL-node-types.html  Addressing-Modes.html  Aggregate-Return.html  (+413 more)
arm_toolchain/arm-gnu-toolchain-12.2.mpacbti-rel1-darwin-arm64-arm-none-eabi/share/info/: annotate.info  as.info  bfd.info  binutils.info  cpp.info  cppinternals.info  dir  gcc.info  gccinstall.info  gccint.info  gdb.info  gfortran.info  gprof.info  ld.info  porting.info  sframe-spec.info  stabs.info
cmake/: st-project.cmake
(+1239 files in other folders)
